--- a/d/do/dow/downlinebuilderdirect.com.html
+++ b/d/do/dow/downlinebuilderdirect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downlinebuilderdirect.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216020847id_/http%3A//downlinebuilderdirect.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downlinebuilderdirect.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616072926id_/http%3A//www.downlinebuilderdirect.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title> Privacy Policy Page</title>
