--- a/y/yo/you/youngthroats.com.html
+++ b/y/yo/you/youngthroats.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the youngthroats.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165604id_/http%3A//youngthroats.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youngthroats.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616074545id_/http%3A//youngthroats.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>The youngest internet deep throats</title>
@@ -43,7 +43,7 @@ You can access all your personally identifiable information that we collect onli
 You can correct factual errors in your personally identifiable information by sending us a request that credibly shows error. <br>
 To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections. <br>
 How To Contact Us: <br>
-Should you have other questions or concerns about these privacy policies, please call us send us an email at <img src="img\legal.gif" align="middle"><br>
+Should you have other questions or concerns about these privacy policies, please call us send us an email at <img src="img/legal.gif" align="middle"><br>
 </div>
 	</td>
   </tr>
