--- a/o/oa/oan/oanda.com.html
+++ b/o/oa/oan/oanda.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oanda.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216160439id_/http%3A//www.oanda.com/site/legal/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oanda.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616132524id_/http%3A//www.oanda.com/site/legal/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
    <title>Privacy Information</title>
@@ -44,7 +44,7 @@
 <table id="menu" cellspacing="0" cellpadding="0" width="100%">
    <tbody><tr> <td rowspan="4">
    <span id="ms1">
-   <a href="http://www.oanda.com">
+   <a href="/">
    <img hspace="0" src="/share/i/ban1.gif" alt="OANDA.com, The currency site provides currency and foreign exchange rates to investors travelers and online businesses"></a>
    <span class="channel">
 	<span id="ch0"><a href="/channels/forex-trader/index.shtml">Traders</a></span>
@@ -221,30 +221,30 @@ h2 {
 </style>
 
 <h1>OANDA CORPORATION<br>Privacy Policy</h1>
-
+<p>&nbsp;</p>
 <h2>A.  Policy Statement</h2>
-OANDA Corporation respects customer privacy and is committed to protecting it.  Customers can visit most pages on the OANDA website -- and use all of the currency tools located on our site -- without identifying themselves or providing any personal or financial information.  However, if a customer wishes to open an FXTrade account, the law requires the customer to provide OANDA with certain non-public personal and financial information (referred to as "Personal Information").  The purpose of OANDA's Privacy Policy is to explain OANDA's privacy policy and practices and how customer Personal Information is collected, used, disclosed and maintained.
-
+<p>OANDA Corporation respects customer privacy and is committed to protecting it.  Customers can visit most pages on the OANDA website -- and use all of the  currency tools located on our site -- without identifying themselves or providing a personal or financial information.  However, if a customer wishes to open an  FXTrade account, the law requires the customer to provide OANDA with certain non-public personal and financial information (referred to as "Personal Information"). The purpose of OANDA's Privacy Policy is to explain OANDA's privacy policy and practices and how customer Personal Information is collected, used, disclosed and maintained.</p>
+<p>&nbsp;</p>
 <h2>B.  Categories of Personal Information OANDA Collects</h2>
-OANDA collects Personal Information about our customers from the following sources:
-<ul>
-<li><b>Account Applications</b> and other forms, including customer name, mailing address, Social Security Number, date of birth, employment information, investment experience, annual income, and estimated net worth;</li>
-<li><b>Customer Transactions</b> with OANDA, such as account number, account balance and trading activity;
-Consumer Reports and other information OANDA receives from third party agencies; and</li>
-<li><b>"Cookies"</b> described in section G below.</li>
+<p>OANDA collects Personal Information about our customers from the following sources:</p>
+<ul class="para_space">
+<li><span class="b_h1">Account Applications</span> and other forms, including customer name, mailing address, Social Security Number, date of birth, employment information, investment experience, annual income, and estimated net worth;</li>
+<li><span class="b_h1">Customer Transactions</span> with OANDA, such as account number, account balance and trading activity; Consumer Reports and other information OANDA receives from third party agencies; and</li>
+<li><span class="b_h1">"Cookies"</span> described in section G below.</li>
 </ul>
+<p>&nbsp;</p>
 <h2>C.  How OANDA Uses Customer Personal Information</h2>
-OANDA may use Personal Information of current and former customers as necessary to:
-<ul>
+<p>OANDA may use Personal Information of current and former customers as necessary to:</p>
+<ul class="line_space">
 <li>complete bank deposits and withdrawals,</li>
 <li>effect, administer or enforce transactions requested or authorized by the customer, and</li>
 <li>maintain or service the customer's account with OANDA.</li>
 </ul>
-Personal Information collected online may be combined with other information customers provide to OANDA in hard copy or through the OANDA help desk.  OANDA will not use or disclose or sell, rent or lease any Personal Information about its customers or former customers to any third parties except as stated in this Policy.  Personal Information may be transferred across national and state borders for the purposes of data consolidation, storage and customer data management.
-
+<p>Personal Information collected online may be combined with other information customers provide to OANDA in hard copy or through the OANDA help desk.  OANDA will not use or disclose or sell, rent or lease any Personal Information about its customers or former customers to any third parties except as stated in this Policy.  Personal Information may be transferred across national and state borders for the purposes of data consolidation, storage and customer data management.</p>
+<p>&nbsp;</p>
 <h2>D.  Disclosure of Customer Personal Information</h2>
-OANDA may disclose Personal Information of current and former customers to affiliated and non-affiliated third party entities in the following cases:
-<ul>
+<p>OANDA may disclose Personal Information of current and former customers to affiliated and non-affiliated third party entities in the following cases:</p>
+<ul class="para_space">
 <li>to OANDA's business partners that perform services on OANDA's behalf under written agreements which restrict use of  Personal Information to the limited purposes for which it is provided to them and to refrain from further use or disclosure except as permitted by law;</li>
 <li>to OANDA affiliates, who are permitted to disclose and use the information only to the extent that OANDA may disclose and use the information under this Policy;</li>
 <li>in the ordinary course of business to OANDA's attorneys, accountants and auditors;</li>
@@ -254,33 +254,33 @@ OANDA may disclose Personal Information of current and former customers to affil
 <li>to government, regulatory or law enforcement agencies to the extent permitted or required by law, or to comply with applicable legal requirements; or</li>
 <li>to comply with civil, criminal or regulatory investigations, or judicial process, subpoena, summons or warrant by federal, state or local authorities.</li>
 </ul>
-
-
+<p>&nbsp;</p>
 <h2>E.  Permission to Disclose Personal Information</h2>
-Except as permitted in this Privacy Policy, OANDA will not share Personal Information about any present or former customer with any non-affiliated third party without the customer's prior written consent or providing the customer with a clear notice, an opportunity to "opt out" of that disclosure, and information on how to opt out.
-
+<p>Except as permitted in this Privacy Policy, OANDA will not share Personal Information about any present or former customer with any non-affiliated third party without the customer's prior written consent or providing the customer with a clear notice, an opportunity to "opt out" of that disclosure, and information on how to opt out.</p>
+<p>&nbsp;</p>
 <h2>F.  Procedures to Safeguard Personal Information</h2>
-OANDA has implemented procedures to safeguard customer Personal Information.  OANDA restricts access to Personal Information to those OANDA employees who need to know that information in order to provide our products or services to them.  OANDA maintains physical, electronic and procedural safeguards that meet or exceed federal standards to safeguard Personal Information.  OANDA protects customer account information by keeping it on the secure portion of its website, using firewalls and other security technology to protect its network and systems from external attacks, and by requiring customers to enter a unique user ID and password to access the FXTrade and FXGame systems.  OANDA conducts periodic internal audits of its business practices and procedures, examining its confidentiality standards and information access, in order to best protect our customers' Personal Information.
-
+<p>OANDA has implemented procedures to safeguard customer Personal Information. OANDA restricts access to Personal Information to those OANDA employees who need to know that information in order to provide our products or services to them. OANDA maintains physical, electronic and procedural safeguards that meet or exceed federal standards to safeguard Personal Information.  OANDA protects customer account information by keeping it on the secure portion of its website, using firewalls and other security technology to protect its network and systems from external attacks, and by requiring customers to enter a unique user ID and password to access the FXTrade and FXGame systems.  OANDA conducts periodic internal audits of its business practices and procedures, examining its confidentiality standards and information access, in order to best protect our customers' Personal Information.</p>
+<p>&nbsp;</p>
 <h2>G.  "Cookies"</h2>
-OANDA uses Internet "cookies".  Cookies are small amounts of data that the OANDA website can send to customers' Web browsers to store on their computer.  OANDA uses cookies to facilitate customers' use of the OANDA website, to store customer preferences for certain kinds of information, and to gather data about the usage of its website for research and other promotions.  Cookies set by OANDA cannot be read by, and are not shared with, any third parties.  Our customers can decide if and how their computer will accept a cookie by configuring their preferences or options in their browser.  However, if a customer refuses cookies, they may not be able to customize certain of OANDA's online services or website features, and some FXTrade services may require repeated re-entry of certain data.
-
+<p>OANDA uses cookies to: (i) facilitate customer use of our website, (ii) enable customization of our online services and website features, (iii) avoid customer re-entry of data, (iv) store customer preferences for certain kinds of information, and (v) gather data about usage of our website for research and promotions. Cookies stored on customers’ web browsers by OANDA cannot be read by, and are not shared with, any third parties. Customers can configure their browser preferences not to accept these cookies.</p>
+<p>Some third-party vendors that provide ads on OANDA web pages may use cookies to collect details on customer website visits and other data (but not names, addresses, email addresses, or telephone numbers) in order to provide ads about goods and services of particular interest to individual customers. For more information on this practice or to opt out, customers can visit the <a href="http://www.networkadvertising.org/managing/opt_out.asp">Network Advertising Initiative site</a> or, in the case of Google's DoubleClick DART cookie, by visiting the <a href="http://www.google.com/privacy_ads.html">Google ad and content network privacy policy</a>.</p>
+<p>&nbsp;</p>
 <h2>H.  Links to non-OANDA websites</h2>
-The OANDA website may provide links to third-party websites for customer convenience and information.  If customers decide to access those links, they will leave the OANDA website.  OANDA does not control those third-party sites or their privacy practices, which may differ from OANDA's.  We do not endorse or make any representations about third-party websites.  The personal data customers choose to give to unrelated third parties is not covered by the OANDA Privacy Policy. Customers should review the privacy policy of any third-party website before submitting their personal information.  Some third-party companies may choose to share their personal data with OANDA.  That sharing is governed by the disclosing company's privacy policy.
-
+<p>The OANDA website may provide links to third-party websites for customer convenience and information.  If customers decide to access those links, they will leave the OANDA website.  OANDA does not control those third-party sites or their privacy practices, which may differ from OANDA's.  We do not endorse or make any representations about third-party websites.  The personal data customers choose to give to unrelated third parties is not covered by the OANDA Privacy Policy. Customers should review the privacy policy of any third-party website before submitting their personal information.  Some third-party companies may choose to share their personal data with OANDA.  That sharing is governed by the disclosing company's privacy policy.</p>
+<p>&nbsp;</p>
 <h2>I.   Notification of Policy and Policy Changes</h2>
-OANDA will provide an initial notice of its Privacy Policy to customers at the time it establishes a customer relationship, and at least annually thereafter, and will post the Policy on its website.  Updates will be posted on the OANDA website, so our customers will always know what information we collect online, how we use it, and what choices they have.
-
+<p>OANDA will provide an initial notice of its Privacy Policy to customers at the time it establishes a customer relationship, and at least annually thereafter, and will post the Policy on its website.  Updates will be posted on the OANDA website, so our customers will always know what information we collect online, how we use it, and what choices they have.</p>
+<p>&nbsp;</p>
 <h2>J.  Contact Us:</h2>
-We value our customers' opinions.  If they have comments or questions about our Privacy Policy, they are invited to <a href="/site/legal/privacy_questions.shtml">email</a> us or write to us at<br>
-       <div id="contact">Privacy Office, OANDA Corp., 140 Broadway, 46th Floor, New York, NY 10005, U.S.A.</div>
+<p>We value our customers' opinions.  If they have comments or questions about our Privacy Policy, they are invited to <a href="/site/legal/privacy_questions.shtml">email</a> us or write to us at<br> <strong>Privacy Office, OANDA Corp., 140 Broadway, 46th Floor, New York, NY 10005, U.S.A.</strong></p>
+<p>&nbsp;</p>
 
    </td>
    </tr>
    <tr><td colspan="2"><center>
 <div id="footer">
    <a href="/index.shtml" title="Currency Site Home">Home Page</a>
-   <a href="http://www.oanda.com/convert/classic" title="Currency Converter">Currency Converter</a>
+   <a href="/convert/classic" title="Currency Converter">Currency Converter</a>
    <a href="/site/legal/termsofuse.shtml" title="Terms of Use">Terms of Use</a>
    <a href="/site/legal/privacy.shtml" title="Privacy Policy">Privacy Policy</a>
    <a href="/cgi/new_account_reg" title="Register">Register</a>
@@ -289,7 +289,7 @@ We value our customers' opinions.  If they have comments or questions about our 
    <a class="last" href="/site/find.shtml" title="Search">Search</a>
      
    <span>
-   <a href="/site/misc/disclaimer.shtml">© 1996 - 2008 OANDA Corporation.
+   <a href="/site/misc/disclaimer.shtml">© 1996 - 2009 OANDA Corporation.
 </a> All rights reserved. All Registered Trade Marks used on this
 Website, whether marked as Trade Marks or not marked, are declared to belong to
 their respective owner(s). OANDA Corporation owns Trade Marks of all its "FX" products
