--- a/n/ne/net/net-temps.com.html
+++ b/n/ne/net/net-temps.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the net-temps.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216160745id_/http%3A//www.net-temps.com/about/index.htm%3Ftype%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the net-temps.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616134403id_/http%3A//www.net-temps.com/about/index.htm%3Ftype%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>About Net-Temps</title>
 <meta name="description" content="Search jobs online with confidence at Net-Temps. Your personal data is treated with an absolute commitment to your privacy.">
-<meta name="keywords" content="job search engine, job openings, job board, recruiting, online recruiting, search resumes, search jobs, employment, post jobs, electronic recruiting, e-recruiting, temporary employment, employment listings, work, temp work, temp jobs, post resumes, single job post, recruiting, online recruiting, job posting, resume, search resumes, online, recruiting services, post jobs">
+<meta name="keywords" content="job search engine, job openings, job board, recruiting, online recruiting, search resumes, search jobs, employment, post jobs, electronic recruiting, e-recruiting, temporary employment, employment listings, work, temp work, temp jobs, post resumes, single job post, recruiting, online recruiting, job posting, resume, search resumes, online, recruiting services, post jobs, employee search, employment search">
 <script language="JavaScript">
 <!--
 var imgOn = new Array();
@@ -74,23 +74,7 @@ function popunder(url, width, height, focus) {
 <div id="headerwrapper" style="margin-bottom:5px;">
 <div style="float:left; padding-top:10px;"><a href="http://www.net-temps.com/"><img src="http://images.net-temps.com/ima/site/new07/logo07.gif" alt="Net-Temps"></a></div>
 <div style="float:right;text-align:right;margin-bottom:10px;margin-top:10px;">
-<span><script type="text/javascript"><!--// <![CDATA[
-/* openads=http://www.net-temps.com/oacontent/www/delivery bannerid=38 zoneid=8 source=Array */
-// ]]> --></script><script type="text/javascript"><!--
-google_ad_client = "pub-0595285785748049";
-google_ad_width = 468;
-google_ad_height = 60;
-google_ad_format = "468x60_as";
-google_ad_type = "text_image";
-google_ad_channel ="";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "006699";
-google_color_text = "000000";
-google_color_url = "006699";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script><script type="text/javascript" src="http://www.net-temps.com/oacontent/www/delivery/ag.php"></script></span><div id="beacon_38" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.net-temps.com/oacontent/www/delivery/lg.php?bannerid=38&amp;campaignid=15&amp;zoneid=8&amp;channel_ids=,&amp;loc=http%3A%2F%2Fwww.net-temps.com%2Fabout%2Findex.htm%3Ftype%3Dprivacy&amp;cb=bd6f58230c" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
+<a href="http://www.net-temps.com/oacontent/www/delivery/ck.php?oaparams=2__bannerid=266__zoneid=8__cb=94629173f2__oadest=http://nettemps.amazingcl.hop.clickbank.net" target="_blank"><img src="http://www.net-temps.com/oacontent/www/delivery/ai.php?filename=js_cl2_468x60.gif&amp;contenttype=gif" width="468" height="60" alt="Amazing Cover Letter Secrets" title="Amazing Cover Letter Secrets" border="0"></a><div id="beacon_94629173f2" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.net-temps.com/oacontent/www/delivery/lg.php?bannerid=266&amp;campaignid=93&amp;zoneid=8&amp;channel_ids=,&amp;loc=http%3A%2F%2Fwww.net-temps.com%2Fabout%2Findex.htm%3Ftype%3Dprivacy&amp;cb=94629173f2" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
 </div>
 <div id="nav">
     <ul id="navul" class="navul">
@@ -116,14 +100,15 @@ google_color_url = "006699";
                 <li><a href="http://desk.net-temps.com/login.html">sign in</a>
                 <div class="menudiv"></div>
                 </li>
-                <li><a href="http://www.net-temps.com/recruiters/">products &amp; services</a>
-                <div class="menudiv"></div>
-                </li>
                 <li>
-                                       <a href="http://www.net-temps.com/recruiters/postajob.htm">post jobs</a>
+                                       <a href="http://www.net-temps.com/recruiters/options/job.html">post jobs</a>
                                     <div class="menudiv"></div>
                 </li>
-                <li><a href="http://www.net-temps.com/recruiters/signup/demo_offer.htm">test drive</a></li>
+		<li>
+		   		   <a href="http://www.net-temps.com/recruiters/options/resumebank.html">search resumes</a>
+		   		<div class="menudiv"></div>
+		</li>
+                <li><a href="http://www.net-temps.com/special/4hourdemo/">Free Trial</a></li>
             </ul>
         </li>
     </ul>
@@ -655,11 +640,12 @@ North Chelmsford, MA 01863
   <a class="footerofive" href="http://www.net-temps.com/sitemap.html">Site Map</a>
 </p>
   <p>© <a class="footerofive" href="http://www.net-temps.com/about/index.htm?type=copyright">Copyright</a>
-  1995-2008, Net-Temps, Inc. All Rights Reserved. Net-Temps ® is a registered trademark.</p>
+  1995-2009, Net-Temps, Inc. All Rights Reserved. Net-Temps ® is a registered trademark.</p>
 <p>
   <a href="http://www.truste.org/ivalidate.php?url=www.net-temps.com&amp;sealid=101"><img src="http://images.net-temps.com/ima/jsa/finalmark.gif" alt="TRUSTe Privacy Statement"></a>
 </p>
 
+<!-- google analytics -->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -668,6 +654,19 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-218852-1");
 pageTracker._trackPageview();
 </script>
+
+<!-- Quantcast -->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-b3Aj241nEqJK6"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-b3Aj241nEqJK6.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+
+
 </div>
 </div>
 
