--- a/t/th/the/theupsstore.com.html
+++ b/t/th/the/theupsstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theupsstore.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216160601id_/http%3A//www.theupsstore.com/pripol.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theupsstore.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616134711id_/http%3A//www.theupsstore.com/pripol.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <script language="JavaScript" src="/javascript/global.js" type="text/javascript"></script><script language="JavaScript" src="https://web.archive.org/web/20031001195044/http://www.theupsstore.com/javascript/api.js" type="text/javascript"></script><link rel="stylesheet" type="text/css" href="http://www.theupsstore.com/stylesheets/ie.css"><link rel="stylesheet" type="text/css" href="http://www.theupsstore.com/stylesheets/print.css" media="PRINT">
@@ -167,7 +167,7 @@
 		
 		document.write( "<a href='" + path + "'" + target + "><img alt='" + alt + "' border=0 height= " + height + " src='" + banner + "' width= " + width + "></a>" ); 
 		-->
-		</script><a href="/redir/locator.asp"><img alt="We are packing experts." border="0" height="140" src="/img/en/bnr_g_pkg_experts_m.gif" width="144"></a></td>
+		</script><a href="/redir/locator.asp"><img alt="More than just mailbox services." border="0" height="140" src="/img/en/bnr_g_mailbox_services_m.gif" width="144"></a></td>
 	</tr>
 	<tr>
 		<td height="29" width="144"><img alt="" border="0" height="29" src="/img/1.gif" width="1"></td>
@@ -392,9 +392,8 @@
 	<td height="1" width="710">
 	<div class="footertext">
 	<span class="noprint"><a href="/index.html">Home</a>&nbsp;|&nbsp;<a href="/redir/locator.asp" onclick="javascript:urchinTracker('/outgoing/upstore_locator');">Locations</a>&nbsp;|&nbsp;<a href="/qcc/qcc.asp">Calculate Cost</a>&nbsp;|&nbsp;<a href="/tracking/tra.html">Tracking</a>&nbsp;|&nbsp;<a href="/products/proandser.html">Products &amp; Services</a>&nbsp;|&nbsp;<a href="/franchise/fraopp.html">Franchise Opportunities</a>&nbsp;|&nbsp;<a href="/about/abotheups.html">About The UPS Store</a></span><br>
-	<span class="noprint"><a href="/customer/cusser.html">Customer Service</a>&nbsp;|&nbsp;<a href="http://www.ups.com/" onclick="javascript:urchinTracker('/outgoing/upstore_upscom');">UPS.com</a></span><br><br>
-	MBE is a UPS® company. The UPS Store® locations are independently owned and operated by franchisees of Mail Boxes Etc., Inc. in the USA and by its international master licensees and their franchisees outside of the USA. Services and hours of operation may vary by location.<br>
-	Copyright&nbsp;© 1994-2008 Mail Boxes Etc., Inc.&nbsp; All rights reserved.<br>
+	<span class="noprint"><a href="/customer/cusser.html">Customer Service</a>&nbsp;|&nbsp;<a href="http://www.ups.com/" onclick="javascript:urchinTracker('/outgoing/upstore_upscom');">UPS.com</a></span>&nbsp;|&nbsp;<a href="http://www.theupsstore.ca/" onclick="javascript:urchinTracker('/outgoing/upstore_upscanada');">The UPS Store Canada <img src="/img/en/xca_flag.gif" alt="Canada" border="0" width="35" height="15"></a><br><br>
+	Copyright © 1994-2009. Mail Boxes Etc., Inc. is a UPS® company. The UPS Store® locations are independently owned and operated by franchisees of Mail Boxes Etc., Inc. in the USA and by its master licensee and its franchisees in Canada.<br>
 	<span class="noprint"><a href="/pripol.html">Privacy Policy</a>&nbsp;|&nbsp;<a href="/terandcon.html">Terms &amp; Conditions of Service</a></span>
 	</div>
 	</td>
